# Knot-shore-grocery-simulation-engine

./: .env.example  .gitignore  README.md  __TESTING_NOTES.md  pyproject.toml
.github/workflows/: test.yml
scripts/: refresh_economic_fixtures.py
seed_data/: store_locations.json
seed_data/economic/: README.md  economic_observations.parquet  metadata.json
src/knot_shore/: __init__.py  __main__.py  anomalies.py  cli.py  config.py  date_resolver.py  dimensions.py  factors.py  observability.py  output.py  promotions.py  realism.py  reports.py  sales_generator.py
tests/: conftest.py  test_anomaly_injection.py  test_backfill_dates.py  test_calendar.py  test_cli_parser.py  test_cmd_backfill.py  test_date_resolver.py  test_deterministic_seed.py  test_docs_count.py  test_observability.py  test_output_manifest.py  test_output_ranges.py  test_promo_no_overlap.py  test_realism_clamps.py  test_realism_fixture_fallback.py  test_realism_query_target.py  test_realism_seeding.py  test_realism_skip.py  test_reports.py  test_store_locations_drift.py  test_summary_matches_detail.py  test_waterfall_integrity.py
