[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knot-shore-sim"
version = "1.0.0"
description = "Daily operational data generator for Knot Shore Grocery — an 8-store fictional chain in the St. Louis metro area."
requires-python = ">=3.11"
dependencies = [
    "faker>=19.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "structlog>=24.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
realism = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
fixtures = [
    "requests>=2.31",
    "python-dotenv",
    "truststore>=0.10",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.scripts]
knot-shore = "knot_shore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
exclude = [".venv", "output", "repomix-output.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
